more 1.21 progress